# hello-ggml

./: .gitignore  .gitmodules  .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/hello_ggml_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: hello_ggml.podspec
ios/Classes/: hello_ggml.c
lib/: hello_ggml.dart  hello_ggml_bindings_generated.dart
src/: CMakeLists.txt  hello_ggml.c  test.cpp  test.h
src/testggml/: CMakeLists.txt  test.cpp
